--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="../js/bundle.js"></script>
+    <script type="text/javascript" src="assets/js/bundle.js"></script>
   </body>
 </html>
